--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="mainHeader">
         <a href="index.html" title="home" class="logo">
           <div id="logo">
-            <h1>Explore California</h1>
+            <h1>Explore Oregon</h1>
           </div>
         </a>
         <div id="siteNav">
@@ -116,7 +116,7 @@
         </div>
         <div id="companyInfo">
           <h1>Contact</h1>
-          <h2>Explore California</h2>
+          <h2>Explore Oregon</h2>
           <p>5605 Nota Street<br />
             Ventura, CA 93003</p>
           <p>866.555.4310<br />866.555.4315 <em>(24 hour support)</em></p>
